--- a/modules/ROOT/pages/depl-examples/bare-metal.adoc
+++ b/modules/ROOT/pages/depl-examples/bare-metal.adoc
@@ -73,6 +73,17 @@ Note that this URL must resolve to the server running this installation.
 
 === Install and configure the Infinite Scale Binary
 
+[NOTE]
+====
+If you have installed Infinite Scale already but want to upgrade it, make a copy of the existing binary first!
+
+[source,bash,subs="attributes+"]
+----
+sudo cp {ocis_bin}/ocis {ocis_bin}/ocis.old
+----
+
+====
+
 * Download and install the Infinite Scale binary. To get the stable binary from ownCloud, visit {ocis-downloadpage-url}/{download-type}/?sort=time&order=desc[download.owncloud.com,window=_blank], select the version and the platform of choice and copy the link of the file.
 +
 [source,bash,subs="attributes+"]
