--- a/modules/ROOT/pages/depl-examples/bare-metal.adoc
+++ b/modules/ROOT/pages/depl-examples/bare-metal.adoc
@@ -75,13 +75,17 @@ Note that this URL must resolve to the server running this installation.
 
 [NOTE]
 ====
-If you have installed Infinite Scale already but want to upgrade it, make a copy of the existing binary first!
+If you have installed Infinite Scale already but want to upgrade it, do the following steps first:
 
+* xref:stopping-infinite-scale[Stop infinite Scale]: +
+You cannot overwrite the binary of a running instance.
+
+* Make a copy of the existing binary first:
++
 [source,bash,subs="attributes+"]
 ----
 sudo cp {ocis_bin}/ocis {ocis_bin}/ocis.old
 ----
-
 ====
 
 * Download and install the Infinite Scale binary. To get the stable binary from ownCloud, visit {ocis-downloadpage-url}/{download-type}/?sort=time&order=desc[download.owncloud.com,window=_blank], select the version and the platform of choice and copy the link of the file.
