--- a/modules/ROOT/pages/depl-examples/minimal-bare-metal.adoc
+++ b/modules/ROOT/pages/depl-examples/minimal-bare-metal.adoc
@@ -87,13 +87,17 @@ Congratulations, you now have access to your Infinite Scale instance.
 
 [NOTE]
 ====
-If you have installed Infinite Scale already but want to upgrade it, make a copy of the existing binary first!
+If you have installed Infinite Scale already but want to upgrade it, do the following steps first:
 
+* xref:stopping-infinite-scale[Stop infinite Scale]: +
+You cannot overwrite the binary of a running instance.
+
+* Make a copy of the existing binary first:
++
 [source,bash,subs="attributes+"]
 ----
 sudo cp {ocis_bin}/ocis {ocis_bin}/ocis.old
 ----
-
 ====
 
 * To get the stable binary from ownCloud, visit {ocis-downloadpage-url}/{download-type}/?sort=time&order=desc[download.owncloud.com,window=_blank], select the version and the platform of choice and copy the link of the file. Check the sort order on the modification date to get the most recent releases on top. Depending on your system and preferences, you may want to save the binary in `{ocis_bin}`.
