--- a/modules/ROOT/pages/additional-information/knowledge-base.adoc
+++ b/modules/ROOT/pages/additional-information/knowledge-base.adoc
@@ -16,18 +16,6 @@ NOTE: ownCloud is not responsible for any referenced content of external pages. 
 
 Implementing a brute force protection against failing login attempts is something that usually should be done before the IDP, the load balancer or whatever component sees the requests first. Setting up {fail2ban_url}[Fail2ban] parsing Infinite Scale logs can be a possibility but is subject to a concrete setup. Follow this xref:{kb_path}/fail2ban-protect-login.adoc[document,window=_blank] for more details and guidance.
 
-== OCIS SSO with Authelia or authentik
-
-Written by a contributor, the linked guide shows how to set up Infinite Scale to either work with https://www.authelia.com/[Authelia,window=_blank] or https://goauthentik.io/[authentik,window=_blank]. Note that the code base at the time of reference was Infinite Scale stable 2.0. Follow this https://helgeklein.com/blog/owncloud-infinite-scale-with-openid-connect-authentication-for-home-networks/[article,window=_blank] for more details and guidance.
-
-== Two-Factor Authentication with Keycloak
-
-If two-factor authentication is needed for Infinite Scale, you can use Keycloak which  provides built-in support for 2FA by default via TOTP/HOTP by using an app like Google Authenticator, FreeOTP and others. For 2FA using email and SMS, Keykloak's Service Provider Interface (SPI) offers customized authentication providers to achieve this.
-
-* See https://www.keycloak.org/docs/latest/server_admin/#one-time-password-otp-policies[Two-Factor Authentication via OTP Policies,window=_blank] for more details and guidance.
-* For use with email, refer to https://medium.com/@mesutpiskin/two-factor-authentication-via-email-in-keycloak-custom-auth-spi-935bbb3952a8[Two-Factor Authentication via Email,window=_blank].
-* See https://www.n-k.de/2020/12/keycloak-2fa-sms-authentication.html[Two-Factor Authentication with SMS,window=_blank] for more details and guidance on usage with SMS.
-
 == CORS Settings with Keycloak
 
 When looking at the xref:deployment/container/orchestration/orchestration.adoc#docker-compose-examples[Docker Compose Examples], in particular the file `ocis_keycloak/config/keycloak/ocis-realm.dist.json`, you will find the following setting responsible for CORS inside Infnite Scale:
@@ -40,3 +28,20 @@ When looking at the xref:deployment/container/orchestration/orchestration.adoc#d
 ----
 
 To complete this setup, you also must configure Keycloak. See the Keykloak https://www.keycloak.org/docs/latest/server_admin/index.html#con-basic-settings_server_administration_guide[Server Administration Guide] in paragraph btn:[Web Origins] for more details.
+
+== Impacts on User Information Updates
+
+When a user information gets updated like a group a user is member gets renamed or deleted, the user will experience a changed behavior in Infinite Scale that needs manual intervention. The source of the changed behavior is not in Infinite Scale but about the OIDC data flow. For details see the xref:deployment/services/s-list/proxy.adoc#claim-updates[Claim Updates] section in the proxy service.
+
+== OCIS SSO with Authelia or authentik
+
+Written by a contributor, the linked guide shows how to set up Infinite Scale to either work with https://www.authelia.com/[Authelia,window=_blank] or https://goauthentik.io/[authentik,window=_blank]. Note that the code base at the time of reference was Infinite Scale stable 2.0. Follow this https://helgeklein.com/blog/owncloud-infinite-scale-with-openid-connect-authentication-for-home-networks/[article,window=_blank] for more details and guidance.
+
+== Two-Factor Authentication with Keycloak
+
+If two-factor authentication is needed for Infinite Scale, you can use Keycloak which  provides built-in support for 2FA by default via TOTP/HOTP by using an app like Google Authenticator, FreeOTP and others. For 2FA using email and SMS, Keykloak's Service Provider Interface (SPI) offers customized authentication providers to achieve this.
+
+* See https://www.keycloak.org/docs/latest/server_admin/#one-time-password-otp-policies[Two-Factor Authentication via OTP Policies,window=_blank] for more details and guidance.
+* For use with email, refer to https://medium.com/@mesutpiskin/two-factor-authentication-via-email-in-keycloak-custom-auth-spi-935bbb3952a8[Two-Factor Authentication via Email,window=_blank].
+* See https://www.n-k.de/2020/12/keycloak-2fa-sms-authentication.html[Two-Factor Authentication with SMS,window=_blank] for more details and guidance on usage with SMS.
+
