--- a/modules/ROOT/pages/depl-examples/bare-metal.adoc
+++ b/modules/ROOT/pages/depl-examples/bare-metal.adoc
@@ -366,3 +366,14 @@ See the linked documentation how to enable the {apache_http2_url}[http2,window=_
 If the server is accessible from the web, see the free {ssl-labs-url}[SSL Labs] page to check the sites SSL security. 
 
 Open a web browser, navigate to your Infinite Scale URL `\https://{ocis_url}` and log in as admin user with the password returned by the `ocis init` command.
+
+== Updating
+
+ifeval::["{version-type}" == "rolling"]
+Note that this deployment can, for the time being, only be updated within Infinite Scale rolling releases.
+endif::[]
+
+If new Infinite Scale releases are available, you *must not* skip any version in between the current running and the latest available release for internal upgrade reasons. All versions need to be downloaded and started one time. For more details see the https://owncloud.dev/ocis/release_roadmap/#updating-and-overlap[Updating and Overlap] description in the developer documentation.
+
+* If there is no release gap, you can update by stopping the runtime via systemd (`sudo systemctl stop ocis`), xref:install-and-configure-the-infinite-scale-binary[update the binary and make it executable] and start the runtime with systemd again (`sudo systemctl start ocis`).
+* For *any* https://owncloud.dev/ocis/release_roadmap/#dates[release gap], you must follow the procedure described above.
