--- a/modules/ROOT/pages/depl-examples/minimal-bare-metal.adoc
+++ b/modules/ROOT/pages/depl-examples/minimal-bare-metal.adoc
@@ -66,7 +66,7 @@ sudo wget -P {ocis_bin} <file_url>
 
 [source,bash,subs="attributes+"]
 ----
-sudo chmod a+x {ocis_bin}/<version>
+sudo chmod a+x {ocis_bin}/ocis-<version>
 ----
 
 [source,bash,subs="attributes+"]
