--- a/modules/ROOT/pages/depl-examples/bare-metal.adoc
+++ b/modules/ROOT/pages/depl-examples/bare-metal.adoc
@@ -72,7 +72,7 @@ Note that this URL must resolve to the server running this installation.
 * Download and install the Infinite Scale binary. To get the stable binary from ownCloud, visit {ocis-downloadpage-url}/{download-type}/?sort=time&order=desc[download.owncloud.com,window=_blank], select the version and the platform of choice and copy the link of the file. Replace `<file_url>` and `<version>` in the commands accordingly.
 +
 --
-Download the source:
+Download the binary:
 
 [source,bash,subs="attributes+"]
 ----
@@ -87,8 +87,8 @@ sudo wget -P {ocis_bin} <file_url>
 sudo chmod a+x {ocis_bin}/ocis-<version>
 ----
 
-* Create a link from the source to the final executable named `ocis`: +
-Note when using a link to the source, upgrading and/or testing is much easier.
+* Create a link from the versioned ocis binary name to the final executable named `ocis`: +
+Note when using a symbolic link like this, upgrading and/or testing is much easier.
 +
 [source,bash,subs="attributes+"]
 ----
